@@ -48,6 +48,11 @@ sphinx:
 	make --directory=docs clean html
 
 
+readme:
+	mkdir -p var/docs
+	rst2html.py --exit-status=2 README.rst var/docs/README.html
+
+
 documentation: sphinx
 
 
