@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,flake8,sphinx,healthcheck
+envlist = py27,py33,flake8,sphinx,readme,healthcheck
 
 [testenv]
 deps =
@@ -26,7 +26,15 @@ deps =
     rednose
     Sphinx
 commands =
-    make --directory docs clean html
+    make documentation
+whitelist_externals =
+    make
+
+[testenv:readme]
+deps =
+    docutils
+commands =
+    make readme
 whitelist_externals =
     make
 
